# set

./: .gitignore  CMakeLists.txt  README.md  main.c  set.c  set_test.c
.github/workflows/: cmake.yml
cmake/: set-config.cmake
include/set/: set.h
